[package]
name = "doctui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antsy = "1.1.0"
cod = { version = "7.3", features = ["input"] }
dirs = "5.0.1"
errata = { version = "2.1.0", features = ["color"] }
owo-colors = "4.0.0"
rustdoc-json = "0.8.7"
rustdoc-types = "0.24.0"
sarge = "7.0"
serde_json = "1.0.108"

